# secure-virtual-pets

./: README.md
svp-backend/: .gitignore  Cargo.toml  cert.pem  key.pem
svp-backend/src/: auth.rs  encryption.rs  main.rs  structs.rs  utils.rs
svp-backend/src/routes/: mod.rs  routes_auth.rs  routes_pet_yards.rs  routes_pets.rs  routes_public.rs  routes_users.rs
svp-frontend/: Cargo.toml  __main.py__  main.py  pet_functions.py  user_functions.py
svp-frontend/pet_art/: cat.txt  dog.txt  fish.txt
svp-frontend/src/: gen_funcs.rs  login.rs  main.rs  signup.rs
