[package]
name = "svp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"