[package]
name = "svp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["macros"] }
axum-server = { version = "*", features = ["tls-rustls"] }
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
aes-gcm-siv = "0.11.1"
rand = "0.8"
base64 = "0.22.0"
once_cell = "1.19.0"
rcgen = "0.12"
aide = { version = "0.13.0", features = ["redoc", "axum", "axum-extra", "macros"] }
schemars = { version = "0.8" }
